test/scc/decl/semantic-errors/040.a
040.t:3:5: error: invalid use of 'restrict'